backend_app/k8s/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - name: http
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30123
